--- a/.env.example
+++ b/.env.example
@@ -12,18 +12,19 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=test_task_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=test_task_app
+DB_PASSWORD=test_task_app
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
